create ShowImage controller
