# docs/swagger.yaml
@@ -192,6 +192,33 @@ paths:
       summary: Updates a cat by ID
       tags:
       - cats
+  /images/{id}:
+    get:
+      description: Shows an image by ID.
+      parameters:
+      - description: ID of the image
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - image/jpeg
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: file
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.Response'
+      summary: Shows an image
+      tags:
+      - images
   /login:
     post:
       consumes:
